fixing gap between input and button

--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@
   border-radius: 30px;
 }
 #addEmail input {
-  width: 17.7rem;
+  width: 18rem;
   height: 100%;
   border-width: 1px;
 }
